[gd_scene load_steps=28 format=3 uid="uid://cuqfpqa3rh2qn"]

[ext_resource type="Texture2D" uid="uid://dhr2d5t6it3bx" path="res://assets/objects/lever.png" id="1_6tq60"]
[ext_resource type="Script" path="res://scn/WorldObjects/lever.gd" id="1_pinjg"]
[ext_resource type="Theme" uid="uid://ba8h2u1lk5xof" path="res://themes/btnBlack_theme.tres" id="2_4ntq4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_o4vtx"]
atlas = ExtResource("1_6tq60")
region = Rect2(0, 0, 160, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_flnjs"]
atlas = ExtResource("1_6tq60")
region = Rect2(160, 0, 160, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ocmi"]
atlas = ExtResource("1_6tq60")
region = Rect2(320, 0, 160, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ujf3"]
atlas = ExtResource("1_6tq60")
region = Rect2(480, 0, 160, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6rslu"]
atlas = ExtResource("1_6tq60")
region = Rect2(640, 0, 160, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_knubt"]
atlas = ExtResource("1_6tq60")
region = Rect2(800, 0, 160, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_7msl2"]
atlas = ExtResource("1_6tq60")
region = Rect2(960, 0, 160, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ct8n4"]
atlas = ExtResource("1_6tq60")
region = Rect2(1120, 0, 160, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_gii26"]
atlas = ExtResource("1_6tq60")
region = Rect2(1280, 0, 160, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_66lu6"]
atlas = ExtResource("1_6tq60")
region = Rect2(1440, 0, 160, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_detej"]
atlas = ExtResource("1_6tq60")
region = Rect2(1600, 0, 160, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_okpw6"]
atlas = ExtResource("1_6tq60")
region = Rect2(800, 0, 160, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgiae"]
atlas = ExtResource("1_6tq60")
region = Rect2(960, 0, 160, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_87kni"]
atlas = ExtResource("1_6tq60")
region = Rect2(1120, 0, 160, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_21kjl"]
atlas = ExtResource("1_6tq60")
region = Rect2(1280, 0, 160, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_7nm2j"]
atlas = ExtResource("1_6tq60")
region = Rect2(1440, 0, 160, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_elhj0"]
atlas = ExtResource("1_6tq60")
region = Rect2(1600, 0, 160, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_8pgtm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4vtx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_flnjs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ocmi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ujf3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6rslu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_knubt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7msl2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ct8n4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gii26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_66lu6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_detej")
}],
"loop": false,
"name": &"fullRotate",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_okpw6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgiae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_87kni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_21kjl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7nm2j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_elhj0")
}],
"loop": false,
"name": &"halfRotate",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_r6u0i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AxeDetector/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_6i603"]
length = 1.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LeverAnimSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LeverAnimSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["fullRotate"]
}

[sub_resource type="Animation" id="Animation_leyxm"]
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LeverAnimSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LeverAnimSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["halfRotate"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AxeDetector/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tchay"]
_data = {
"RESET": SubResource("Animation_r6u0i"),
"fullRotate": SubResource("Animation_6i603"),
"halfRotate": SubResource("Animation_leyxm")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3gp88"]
size = Vector2(96, 71)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yha57"]
size = Vector2(18, 45)

[node name="Lever" type="Node2D"]
script = ExtResource("1_pinjg")

[node name="LeverAnimSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_8pgtm")
animation = &"halfRotate"

[node name="LeverAnimPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tchay")
}

[node name="PlayerDetector" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2(0, 4.5)
shape = SubResource("RectangleShape2D_3gp88")

[node name="AxeDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2048

[node name="CollisionShape2D" type="CollisionShape2D" parent="AxeDetector"]
position = Vector2(0, -8.5)
shape = SubResource("RectangleShape2D_yha57")

[node name="Label" type="Label" parent="."]
z_index = 3
offset_left = -17.0
offset_top = -120.0
offset_right = 23.0
offset_bottom = -92.0
theme = ExtResource("2_4ntq4")
theme_override_font_sizes/font_size = 22
horizontal_alignment = 1

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_player_detector_body_exited"]
[connection signal="body_entered" from="AxeDetector" to="." method="_on_axe_detector_body_entered"]
